--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -70,7 +70,7 @@
             tools:layout="@layout/fragment_gallery" />
     </navigation>
     <navigation android:id="@+id/cartGraph"
-        app:startDestination="@id/cardFragment">
+        app:startDestination="@id/ordering">
         <fragment
             android:id="@+id/ordering"
             android:name="com.example.logo.ui.card.Ordering"
@@ -85,6 +85,14 @@
                 android:id="@+id/action_cardFragment_to_ordering"
                 app:destination="@id/ordering" />
         </fragment>
+        <dialog
+            android:id="@+id/inpuSmsBottomSheet"
+            android:name="com.example.logo.bottom_sheets.InpuSmsBottomSheet"
+            android:label="InpuSmsBottomSheet" >
+            <action
+                android:id="@+id/action_inpuSmsBottomSheet_to_ordering"
+                app:destination="@id/ordering" />
+        </dialog>
     </navigation>
 
 </navigation>
