--- a/app/src/main/res/layout/item_card.xml
+++ b/app/src/main/res/layout/item_card.xml
@@ -127,6 +127,7 @@
                 android:textSize="18dp"/>
 
             <ImageView
+                android:id="@+id/btn"
                 android:layout_width="32dp"
                 android:layout_height="32dp"
 
