--- a/app/src/main/res/layout/dialog_sms.xml
+++ b/app/src/main/res/layout/dialog_sms.xml
@@ -91,5 +91,22 @@
            android:textColor="@color/black"
            android:clickable="false"
            android:fontFamily="@font/montserrat_medium"/>
+
+       <androidx.appcompat.widget.AppCompatButton
+           android:id="@+id/btnConfirm"
+           android:layout_width="match_parent"
+           android:layout_height="wrap_content"
+
+           android:layout_marginTop="16dp"
+           android:layout_marginBottom="40dp"
+           android:layout_marginHorizontal="24dp"
+           android:layout_gravity="center"
+           android:textAllCaps="false"
+
+           android:text="Подтвердить"
+           android:background="@color/black"
+           android:textColor="@color/white"
+           android:clickable="false"
+           android:fontFamily="@font/montserrat_medium"/>
    </LinearLayout>
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
